<resources>
    <string name="app_name">KotlinSampleApp</string>
    <string name="textview_and_edittext">TextView and EditText</string>
    <string name="provide_input">Provide Input</string>
    <string name="display_output">Display Output</string>
    <string name="textview">TextView</string>
    <string name="click_button">Click Button</string>
    <string name="reset_output_text">reset output text</string>
    <string name="enter_text">Enter Text</string>
    <string name="back">back</string>
    <string name="secondactivity">SecondActivity</string>
    <string name="value">Value</string>
    <string name="id">Id</string>
    <string name="next">Next</string>
    <string name="logo_image">logo image</string>

    <string name="dialogTitle">Delete File</string>
    <string name="dialogMessage">Deleting file may be harm your system</string>

    <string name="buttonText">Display Next Course</string>
    <string name="heading">MVP Architecture Pattern</string>
    <string name="subHeading">GeeksforGeeks Computer Science Online Courses</string>
    <string name="description">Course Description</string>

    <string-array name="technology_list">
        <item>C</item>
        <item>C++</item>
        <item>Java</item>
        <item>.Net</item>
        <item>Kotlin</item>
        <item>Ruby</item>
        <item>Rails</item>
        <item>Python</item>
        <item>Java Script</item>
        <item>Php</item>
        <item>Ajax</item>
        <item>Perl</item>
        <item>Hadoop</item>
        <item>Dart</item>
        <item>React</item>
    </string-array>


</resources>